# claude_proxy_switcher

./: .gitignore  Cargo.toml  README.md  claude_proxy_switcher.sh
.trae/: TODO.md
src/: cli.rs  config.rs  env_manager.rs  main.rs  proxy.rs  ui.rs
