[package]
name = "claude_px"
version = "1.0.0"
edition = "2021"
authors = ["开发助手"]
description = "Claude代理站切换工具 - Rust版本"
license = "MIT"

[[bin]]
name = "claude_px"
path = "src/main.rs"

[dependencies]
# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }

# JSON序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 文件系统操作
dirs = "5.0"

# 彩色输出
colored = "2.0"

# 交互式选择器
ratatui = "0.28"
crossterm = "0.28"
url = "2.5"

# 临时文件
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"